--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <div class="row">
       <div class="col">
         <h3 class="mb-4">About Full Stack Conf</h3>
-        <img src="img/pdx.jpg" <p>The beautiful city of Portland, Oregon will be the host city for Full Stack Conf!</p>
+        <img class="mb-4 img-fluid rounded" src="img/pdx.jpg" alt="Portland">
+        <p>The beautiful city of Portland, Oregon will be the host city for Full Stack Conf!</p>
         <p>Explore the future of JavaScript with a lineup of industry professionals. Discover new techniques to advance
           your career as a web developer.</p>
       </div>
@@ -42,6 +43,17 @@
         </ul>
       </div>
     </div><!-- About Ends  -->
+
+    <!-- Speakers section-->
+    <h1 class="display-4 text-center my-5">Speakers</h1>
+    [Speaker bios go here]
+    <!-- Speakers section ends -->
+
+    <!-- Schedule -->
+    <h1 class="display-4 text-center my-5">Schedule</h1>
+    [Conference schedule goes here]
+    <!-- Schedule section ends -->
+
   </div><!-- Container Ends  -->
 
 
