--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <div class="container pt-4">
     <!--About section-->
     <div class="row">
-      <div class="col">
+      <div class="col-lg">
         <h3 class="mb-4">About Full Stack Conf</h3>
         <img class="mb-4 img-fluid rounded" src="img/pdx.jpg" alt="Portland">
         <p>The beautiful city of Portland, Oregon will be the host city for Full Stack Conf!</p>
         <p>Explore the future of JavaScript with a lineup of industry professionals. Discover new techniques to advance
           your career as a web developer.</p>
       </div>
-      <div class="col">
+      <div class="col-lg">
         <h3 class="mb-4">Expert Speakers</h3>
         <p>Our expert speaker lineup was just announced, so don't wait too long before grabbing your tickets!</p>
         <p>Want to meet the international JavaScript community and share skills with some of the world's top experts,
@@ -31,7 +31,7 @@
         <p>Full Stack Conf is committed to being inclusive and welcoming for everyone. We look forward to another
           intensive day of learning and sharing.</p>
       </div>
-      <div class="col">
+      <div class="col-lg">
         <h3 class="mb-4">What You'll Learn</h3>
         <ul>
           <li><strong>MongoDB</strong>: NoSQL database</li>
@@ -45,12 +45,12 @@
     </div><!-- About Ends  -->
 
     <!-- Speakers section-->
-    <h1 class="display-4 text-center my-5">Speakers</h1>
+    <h1 class="display-4 text-center my-5 text-muted">Speakers</h1>
     [Speaker bios go here]
     <!-- Speakers section ends -->
 
     <!-- Schedule -->
-    <h1 class="display-4 text-center my-5">Schedule</h1>
+    <h1 class="display-4 text-center my-5 text-muted">Schedule</h1>
     [Conference schedule goes here]
     <!-- Schedule section ends -->
 
