--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   <div class="container pt-4">
     <!--About section-->
     <div class="row">
-      <div class="col-lg">
+      <div class="col-lg order-lg-2">
         <h3 class="mb-4">About Full Stack Conf</h3>
         <img class="mb-4 img-fluid rounded" src="img/pdx.jpg" alt="Portland">
         <p>The beautiful city of Portland, Oregon will be the host city for Full Stack Conf!</p>
         <p>Explore the future of JavaScript with a lineup of industry professionals. Discover new techniques to advance
           your career as a web developer.</p>
       </div>
-      <div class="col-lg">
+      <div class="col-lg order-lg-1">
         <h3 class="mb-4">Expert Speakers</h3>
         <p>Our expert speaker lineup was just announced, so don't wait too long before grabbing your tickets!</p>
         <p>Want to meet the international JavaScript community and share skills with some of the world's top experts,
@@ -31,7 +31,7 @@
         <p>Full Stack Conf is committed to being inclusive and welcoming for everyone. We look forward to another
           intensive day of learning and sharing.</p>
       </div>
-      <div class="col-lg">
+      <div class="col-lg order-lg-3">
         <h3 class="mb-4">What You'll Learn</h3>
         <ul>
           <li><strong>MongoDB</strong>: NoSQL database</li>
@@ -53,6 +53,26 @@
     <h1 class="display-4 text-center my-5 text-muted">Schedule</h1>
     [Conference schedule goes here]
     <!-- Schedule section ends -->
+
+    <!-- signup form -->
+    <hr>
+    <div class="row py-4 text-muted">
+      <div class="col-md">
+        <p><strong>About Treehouse</strong></p>
+        <p>Treehouse brings affordable technology education to people everywhere to help them achieve their dreams and
+          change the world.</p>
+      </div>
+      <div class="col-md">
+        <p><strong>Stay up-to-date on Full Stack Conf</strong></p>
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Email">
+          <span class="input-group-btn">
+            <button class="btn btn-primary" type="button">Sign up</button>
+          </span>
+        </div>
+      </div>
+    </div>
+    <hr><!-- /signup form -->
 
   </div><!-- Container Ends  -->
 
