--- a/index.html
+++ b/index.html
@@ -13,12 +13,33 @@
 </head>
 
 <body>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" aria-current="page" href="#home">Home <span class="sr-only">
+              (current)
+            </span></a>
+          <a class="nav-item nav-link" href="#about">About</a>
+          <a class="nav-item nav-link" href="#speakers">Speakers</a>
+          <a class="nav-item nav-link" href="#schedule">Schedule</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+  <!-- Navbar Ends -->
   <div class="container pt-4">
     <!--About section-->
     <div class="row">
       <div class="col-lg order-lg-2">
         <h3 class="mb-4">About Full Stack Conf</h3>
-        <img class="mb-4 img-fluid rounded" src="img/pdx.jpg" alt="Portland">
+        <img class="mb-4 img-fluid rounded d-none d-sm-block" src="img/pdx.jpg" alt="Portland">
         <p>The beautiful city of Portland, Oregon will be the host city for Full Stack Conf!</p>
         <p>Explore the future of JavaScript with a lineup of industry professionals. Discover new techniques to advance
           your career as a web developer.</p>
@@ -57,12 +78,12 @@
     <!-- signup form -->
     <hr>
     <div class="row py-4 text-muted">
-      <div class="col-md">
+      <div class="col-md col-xl-5">
         <p><strong>About Treehouse</strong></p>
         <p>Treehouse brings affordable technology education to people everywhere to help them achieve their dreams and
           change the world.</p>
       </div>
-      <div class="col-md">
+      <div class="col-md col-xl-5 ml-auto">
         <p><strong>Stay up-to-date on Full Stack Conf</strong></p>
         <div class="input-group">
           <input type="text" class="form-control" placeholder="Email">
