--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <div class="container-fluid">
-      <a class="navbar-brand order-1" href="https://www.teamtreehouse.com" target="_blank">Presented by Treehouse</a>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+    <div class="container">
+      <a class="navbar-brand order-1 mr-0" href="https://www.teamtreehouse.com" target="_blank">Presented by
+        Treehouse</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -32,8 +33,24 @@
         </div>
       </div>
     </div>
+    </div>
   </nav>
   <!-- Navbar Ends -->
+
+  <!-- Jumbotron component begins -->
+  <div class="jumbotron jumbotron-fluid bg-info text-white">
+    <div class="container text-sm-center pt-5">
+      <h1 class="display-2">Full Stack Conference</h1>
+      <p class="lead">A One-day Conference About All Things JavaScript</p>
+
+      <div class="btn-group mt-4" role="group" aria-label="Callout Buttons">
+        <button type="button" class="btn btn-primary btn-lg">Register Now</button>
+        <a class="btn btn-light btn-lg" href="#speakers">See Speakers</a>
+      </div>
+    </div>
+  </div>
+  <!-- Jumbotron component ends -->
+
   <div class="container pt-4">
     <!--About section-->
     <div class="row">
@@ -66,14 +83,38 @@
     </div><!-- About Ends  -->
 
     <!-- Speakers section-->
-    <h1 class="display-4 text-center my-5 text-muted">Speakers</h1>
-    [Speaker bios go here]
+    <h1 id="speakers" class="display-4 text-center my-5 text-muted">Speakers</h1>
+    <div class="row">
+      <div class="col-md-6">
+      </div>
+
+      <div class="col-md-6">
+      </div>
+
+      <div class="col-md-6">
+      </div>
+
+      <div class="col-md-6">
+      </div>
+
+      <div class="col-md-6">
+      </div>
+
+      <div class="col-md-6">
+      </div>
+    </div><!-- /speakers -->
     <!-- Speakers section ends -->
 
     <!-- Schedule -->
     <h1 class="display-4 text-center my-5 text-muted">Schedule</h1>
     [Conference schedule goes here]
     <!-- Schedule section ends -->
+
+    <!-- Callout Button begins -->
+    <button type="button" class="btn btn-outline-info btn-lg d-block mx-auto my-5">Don't Miss Out, Register
+      Now!</button>
+    <!-- Callout Button ends -->
+
 
     <!-- signup form -->
     <hr>
@@ -95,20 +136,53 @@
     </div>
     <hr><!-- /signup form -->
 
-  </div><!-- Container Ends  -->
+    <!-- Footer begins -->
+    <div class="row py-3">
+      <div class="col-md-7">
+        <ul class="nav">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="#">Community</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Tracks</a>
+          </li>
+          <li class="nav-item">
+            <!-- Example split danger button -->
+            <div class="btn-group dropup">
+              <button type="button" class="btn btn-outline-secondary">Other Conferences</button>
+              <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split"
+                data-toggle="dropdown" aria-expanded="false">
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">CSS Conference</a></li>
+                <li><a class="dropdown-item" href="#">Python Conference</a></li>
+                <li><a class="dropdown-item" href="#">Java Conference</a></li>
+                <li><a class="dropdown-item" href="#">Swift Conference</a></li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class="col-md text-md-right">
+        <small>&copy; 2017 Full Stack Conf &amp; Treehouse</small>
+      </div>
+      <!-- Footer ends -->
+
+    </div><!-- Container Ends  -->
 
 
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
-    integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
-    crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
-    integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
-    crossorigin="anonymous"></script>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
+      integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+      crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
+      integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
