--- a/index.html
+++ b/index.html
@@ -71,21 +71,23 @@
       </div>
       <div class="col-lg order-lg-3">
         <h3 class="mb-4">What You'll Learn</h3>
-        <ul>
-          <li><strong>MongoDB</strong>: NoSQL database</li>
-          <li><strong>Express</strong>: Framework for Node</li>
-          <li><strong>React</strong>: JavaScript library</li>
-          <li><strong>Node.js</strong>: JavaScript environment</li>
-          <li><strong>ES2015</strong>: Latest version of JavaScript</li>
-          <li><strong>Babel</strong>: JavaScript compiler</li>
-        </ul>
+        <div class="list-group">
+          <a href="#" class="list-group-item list-group-item-action"><strong>MongoDB</strong>: NoSQL database</a>
+          <a href="#" class="list-group-item list-group-item-action"><strong>Express</strong>: Framework for Node</a>
+          <a href="#" class="list-group-item list-group-item-action"><strong>React</strong>: JavaScript library</a>
+          <a href="#" class="list-group-item list-group-item-action"><strong>Node.js</strong>: JavaScript
+            environment</a>
+          <a href="#" class="list-group-item list-group-item-action"><strong>ES2015</strong>: Latest version of
+            JavaScript</a>
+          <a href="#" class="list-group-item list-group-item-action"><strong>Babel</strong>: JavaScript compiler</a>
+        </div>
       </div>
     </div><!-- About Ends  -->
 
     <!-- Speakers section-->
     <h1 id="speakers" class="display-4 text-center my-5 text-muted">Speakers</h1>
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 col-lg-4">
         <div class="card mb-3">
           <img class="card-img-top" src="img/vivianne.png" alt="Vivianne">
           <div class="card-body">
@@ -97,7 +99,7 @@
         </div>
       </div>
 
-      <div class="col-md-6">
+      <div class="col-md-6 col-lg-4">
         <div class="card mb-3">
           <img class="card-img-top" src="img/nodestradamus.png" alt="NodeStradamus">
           <div class="card-body">
@@ -109,7 +111,7 @@
         </div>
       </div>
 
-      <div class="col-md-6">
+      <div class="col-md-6 col-lg-4">
         <div class="card mb-3">
           <img class="card-img-top" src="img/robbie.png" alt="Robbie">
           <div class="card-body">
@@ -120,7 +122,7 @@
         </div>
       </div>
 
-      <div class="col-md-6">
+      <div class="col-md-6 col-lg-4">
         <div class="card mb-3">
           <img class="card-img-top" src="img/ecma.png" alt="Ecma">
           <div class="card-body">
@@ -131,7 +133,7 @@
         </div>
       </div>
 
-      <div class="col-md-6">
+      <div class="col-md-6 col-lg-4">
         <div class="card mb-3">
           <img class="card-img-top" src="img/jay.png" alt="Jay">
           <div class="card-body">
@@ -141,7 +143,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 col-lg-4">
         <div class="card mb-3">
           <img class="card-img-top" src="img/json.png" alt="Json">
           <div class="card-body">
@@ -156,7 +158,57 @@
 
     <!-- Schedule -->
     <h1 class="display-4 text-center my-5 text-muted">Schedule</h1>
-    [Conference schedule goes here]
+    <ul class="list-group">
+      <li class="list-group-item">
+        <div class="d-flex justify-content-between">
+          <h5 class="mb-1">Keynote: Internet of Things</h5>
+          <span class="badge badge-pill badge-info p-2">9:00am</span>
+        </div>
+        <p class="mb-1">NodeStradamus</p>
+      </li>
+      <li class="list-group-item">
+        <div class="d-flex justify-content-between">
+          <h5 class="mb-1">React Basics</h5>
+          <span class="badge badge-pill badge-info p-2">10:00am</span>
+        </div>
+        <p class="mb-1">Vivianne McVue</p>
+      </li>
+      <li class="list-group-item">
+        <div class="d-flex justify-content-between">
+          <h5 class="mb-1">Hey, Mongo!</h5>
+          <span class="badge badge-pill badge-info p-2">11:00am</span>
+        </div>
+        <p class="mb-1">Jay Query</p>
+      </li>
+      <li class="list-group-item list-group-item-success">
+        <div class="d-flex justify-content-between">
+          <h5 class="mb-1">Lunch</h5>
+          <span class="badge badge-pill badge-info p-2">12:00pm</span>
+        </div>
+        <p class="mb-1">Free pizza for everyone!</p>
+      </li>
+      <li class="list-group-item">
+        <div class="d-flex justify-content-between">
+          <h5 class="mb-1">Introducing ES2015</h5>
+          <span class="badge badge-pill badge-info p-2">1:00pm</span>
+        </div>
+        <p class="mb-1">Ecma Scriptnstuff</p>
+      </li>
+      <li class="list-group-item">
+        <div class="d-flex justify-content-between">
+          <h5 class="mb-1">Getting Started With Redux</h5>
+          <span class="badge badge-pill badge-info p-2">2:00pm</span>
+        </div>
+        <p class="mb-1">Robbie Redux</p>
+      </li>
+      <li class="list-group-item">
+        <div class="d-flex justify-content-between">
+          <h5 class="mb-1">What's Babel?</h5>
+          <span class="badge badge-pill badge-info p-2">3:00pm</span>
+        </div>
+        <p class="mb-1">Json Babel</p>
+      </li>
+    </ul>
     <!-- Schedule section ends -->
 
     <!-- Callout Button begins -->
