--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 </head>
 
-<body>
+<body id="home" data-spy="scroll" data-target=".navbar">
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
     <div class="container">
@@ -54,7 +54,7 @@
 
   <div class="container pt-4">
     <!--About section-->
-    <div class="row">
+    <div id="about" class="row">
       <div class="col-lg order-lg-2">
         <h3 class="mb-4">About Full Stack Conf</h3>
         <img class="mb-4 img-fluid rounded d-none d-sm-block" src="img/pdx.jpg" alt="Portland">
