--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 </head>
 
-<body id="home" data-spy="scroll" data-target=".navbar">
+<body id="home" data-spy="scroll" data-target=".navbar" data-offset="100">
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
     <div class="container">
@@ -158,7 +158,7 @@
     <!-- Speakers section ends -->
 
     <!-- Schedule -->
-    <h1 class="display-4 text-center my-5 text-muted">Schedule</h1>
+    <h1 id="schedule" class="display-4 text-center my-5 text-muted">Schedule</h1>
     <ul class="list-group">
       <li class="list-group-item">
         <div class="d-flex justify-content-between">
