--- a/index.html
+++ b/index.html
@@ -301,11 +301,11 @@
               <h5 class="mb-4">Basic Info</h5>
               <div class="form-group">
                 <label class="form-control-label" for="name">Name:</label>
-                <input type="text" class="form-control" id="name">
+                <input type="text" class="form-control" id="name" required>
               </div>
               <div class="form-group">
                 <label class="form-control-label" for="email">Email:</label>
-                <input type="email" class="form-control" id="email">
+                <input type="email" class="form-control" id="email" required>
               </div>
               <div class="form-group">
                 <label for="role">Job Role:</label>
@@ -364,17 +364,17 @@
               <div class="form-row">
                 <div class="col-lg-6 form-group">
                   <label for="cc-num">Card Number:</label>
-                  <input class="form-control" id="cc-num" type="text">
+                  <input class="form-control" id="cc-num" type="text" required>
                 </div>
 
                 <div class="col-lg form-group">
                   <label for="zip">Zip Code:</label>
-                  <input class="form-control" id="zip" type="text">
+                  <input class="form-control" id="zip" type="text" required>
                 </div>
 
                 <div class="col-lg form-group">
                   <label for="cvv">CVV:</label>
-                  <input class="form-control" id="cvv" type="text">
+                  <input class="form-control" id="cvv" type="text" required>
                 </div>
 
                 <div class="form-row">
@@ -412,22 +412,19 @@
               <hr class="mb-4">
               <button type="submit" class="btn btn-primary btn-lg">Register</button>
             </form><!-- Registration Form ends -->
-          </div>
-        </div>
-      </div>
-    </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
-      integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
-      crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
-      integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
-      crossorigin="anonymous"></script>
+
+            <!-- Optional JavaScript -->
+            <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+            <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+              integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+              crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
+              integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
+              crossorigin="anonymous"></script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
+              integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
+              crossorigin="anonymous"></script>
 </body>
 
 </html>
