--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
     <h1 id="schedule" class="display-4 text-center my-5 text-muted">Schedule</h1>
     <ul class="list-group">
       <li class="list-group-item">
+        <!-- <img class="mr-3" src="..." alt="Generic placeholder image"> -->
         <div class="d-flex justify-content-between">
           <h5 class="mb-1">Keynote: Internet of Things</h5>
           <span class="badge badge-pill badge-info p-2">9:00am</span>
